Implement clarity design system

--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
 
 <head>
     <meta charset="utf-8">
-    <title>WpAnalyze</title>
+    <title>Webpack Analyzer</title>
     <base href="/">
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
-<link rel="stylesheet" href="styles.3ff695c00d717f2d2a11.css"></head>
+<link rel="stylesheet" href="styles.8252e8006d5b17ed2f9f.css"></head>
 
 <body>
     <app-root></app-root>
-<script type="text/javascript" src="runtime.ec2944dd8b20ec099bf3.js"></script><script type="text/javascript" src="polyfills.3bfd66addbd0d2814591.js"></script><script type="text/javascript" src="main.422a134e85d03e566fbc.js"></script></body>
+<script src="runtime.ee2dcdf2e59a31c9da78.js"></script><script src="polyfills-es5.9d81a2f44a7b7d24fa36.js" nomodule></script><script src="polyfills.4680225e2d3745250740.js"></script><script src="scripts.fcf82135278e39f0d0b2.js"></script><script src="main.dd39040ac176b3968683.js"></script></body>
 
 </html>
