--- a/index.html
+++ b/index.html
@@ -1,17 +1,14 @@
 <!doctype html>
 <html lang="en">
-
 <head>
-    <meta charset="utf-8">
-    <title>Webpack Analyzer</title>
-    <base href="/">
+  <meta charset="utf-8">
+  <title>WpAnalyze</title>
+  <base href="/">
 
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" type="image/x-icon" href="favicon.ico">
-<link rel="stylesheet" href="styles.8252e8006d5b17ed2f9f.css"></head>
-
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
+<link rel="stylesheet" href="styles.4734bc568ac9acf85303.css"></head>
 <body>
-    <app-root></app-root>
-<script src="runtime.ee2dcdf2e59a31c9da78.js"></script><script src="polyfills-es5.9d81a2f44a7b7d24fa36.js" nomodule></script><script src="polyfills.4680225e2d3745250740.js"></script><script src="scripts.fcf82135278e39f0d0b2.js"></script><script src="main.dd39040ac176b3968683.js"></script></body>
-
+  <app-root></app-root>
+<script src="polyfills-es5.1c5f1a3f0d9de0bcdf63.js" nomodule defer></script><script src="polyfills-es2015.0fe6949bc5ff4b784062.js" type="module"></script><script src="scripts.8277eefd14e952b7d2e3.js" defer></script><script src="runtime-es2015.85f895af57b038f1e5b4.js" type="module"></script><script src="main-es2015.d2a97d4d23532dd5ede7.js" type="module"></script><script src="runtime-es5.85f895af57b038f1e5b4.js" nomodule defer></script><script src="main-es5.d2a97d4d23532dd5ede7.js" nomodule defer></script></body>
 </html>
